Fixed TBA center alignment Issue

--- a/css/bouncing.css
+++ b/css/bouncing.css
@@ -29,7 +29,7 @@
 .bouncing-text-prizes {
   position: relative;
   display: flex;
-  margin-top: 8%;
+  margin-top: 3%;
   font-size: 70px;
   font-family: arial black;
   letter-spacing: 0.6rem;
